@@ -1,25 +1,71 @@
 package org.opendatadiscovery.oddplatform.repository;
 
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.google.common.collect.Sets;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import lombok.Builder;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.ListUtils;
+import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.jooq.Record;
-import org.jooq.*;
-import org.opendatadiscovery.oddplatform.dto.*;
-import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto.DataConsumerDetailsDto;
-import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto.DataQualityTestDetailsDto;
-import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto.DataTransformerDetailsDto;
-import org.opendatadiscovery.oddplatform.dto.attributes.*;
+import org.jooq.Record1;
+import org.jooq.Record3;
+import org.jooq.Select;
+import org.jooq.SelectConditionStep;
+import org.jooq.SelectHavingStep;
+import org.jooq.SelectLimitStep;
+import org.jooq.SelectOnConditionStep;
+import org.jooq.SelectOrderByStep;
+import org.jooq.SortField;
+import org.jooq.SortOrder;
+import org.jooq.Table;
+import org.jooq.TableField;
+import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityDimensionsDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityDimensionsDto.DataConsumerDetailsDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityDimensionsDto.DataQualityTestDetailsDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityDimensionsDto.DataTransformerDetailsDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityGroupLineageDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityLineageDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityLineageStreamDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityTypeDto;
+import org.opendatadiscovery.oddplatform.dto.FacetStateDto;
+import org.opendatadiscovery.oddplatform.dto.LineageDepth;
+import org.opendatadiscovery.oddplatform.dto.LineageStreamKind;
+import org.opendatadiscovery.oddplatform.dto.OwnershipDto;
+import org.opendatadiscovery.oddplatform.dto.attributes.DataConsumerAttributes;
+import org.opendatadiscovery.oddplatform.dto.attributes.DataEntityAttributes;
+import org.opendatadiscovery.oddplatform.dto.attributes.DataInputAttributes;
+import org.opendatadiscovery.oddplatform.dto.attributes.DataQualityTestAttributes;
+import org.opendatadiscovery.oddplatform.dto.attributes.DataSetAttributes;
+import org.opendatadiscovery.oddplatform.dto.attributes.DataTransformerAttributes;
 import org.opendatadiscovery.oddplatform.exception.NotFoundException;
-import org.opendatadiscovery.oddplatform.model.tables.DataEntity;
-import org.opendatadiscovery.oddplatform.model.tables.GroupEntityRelations;
-import org.opendatadiscovery.oddplatform.model.tables.GroupParentGroupRelations;
-import org.opendatadiscovery.oddplatform.model.tables.pojos.*;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.AlertPojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.DataEntityPojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.DataEntityTaskRunPojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.DataSourcePojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.DatasetVersionPojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.LineagePojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.NamespacePojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.OwnerPojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.OwnershipPojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.RolePojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.TagPojo;
 import org.opendatadiscovery.oddplatform.model.tables.records.DataEntityRecord;
 import org.opendatadiscovery.oddplatform.model.tables.records.LineageRecord;
 import org.opendatadiscovery.oddplatform.repository.util.JooqFTSHelper;
@@ -40,12 +86,35 @@ import java.util.stream.Stream;
 import static java.util.Collections.*;
 import static java.util.function.Function.identity;
 import static java.util.function.Predicate.not;
+import static org.jooq.impl.DSL.count;
+import static org.jooq.impl.DSL.countDistinct;
+import static org.jooq.impl.DSL.field;
+import static org.jooq.impl.DSL.jsonArrayAgg;
 import static org.jooq.impl.DSL.max;
 import static org.jooq.impl.DSL.*;
 import static org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto.DataInputDetailsDto;
 import static org.opendatadiscovery.oddplatform.dto.LineageStreamKind.DOWNSTREAM;
 import static org.opendatadiscovery.oddplatform.dto.LineageStreamKind.UPSTREAM;
-import static org.opendatadiscovery.oddplatform.model.Tables.*;
+import static org.opendatadiscovery.oddplatform.model.Tables.ALERT;
+import static org.opendatadiscovery.oddplatform.model.Tables.DATASET_FIELD;
+import static org.opendatadiscovery.oddplatform.model.Tables.DATASET_STRUCTURE;
+import static org.opendatadiscovery.oddplatform.model.Tables.DATASET_VERSION;
+import static org.opendatadiscovery.oddplatform.model.Tables.DATA_ENTITY;
+import static org.opendatadiscovery.oddplatform.model.Tables.DATA_SOURCE;
+import static org.opendatadiscovery.oddplatform.model.Tables.GROUP_ENTITY_RELATIONS;
+import static org.opendatadiscovery.oddplatform.model.Tables.GROUP_PARENT_GROUP_RELATIONS;
+import static org.opendatadiscovery.oddplatform.model.Tables.LABEL;
+import static org.opendatadiscovery.oddplatform.model.Tables.LABEL_TO_DATASET_FIELD;
+import static org.opendatadiscovery.oddplatform.model.Tables.LINEAGE;
+import static org.opendatadiscovery.oddplatform.model.Tables.METADATA_FIELD;
+import static org.opendatadiscovery.oddplatform.model.Tables.METADATA_FIELD_VALUE;
+import static org.opendatadiscovery.oddplatform.model.Tables.NAMESPACE;
+import static org.opendatadiscovery.oddplatform.model.Tables.OWNER;
+import static org.opendatadiscovery.oddplatform.model.Tables.OWNERSHIP;
+import static org.opendatadiscovery.oddplatform.model.Tables.ROLE;
+import static org.opendatadiscovery.oddplatform.model.Tables.SEARCH_ENTRYPOINT;
+import static org.opendatadiscovery.oddplatform.model.Tables.TAG;
+import static org.opendatadiscovery.oddplatform.model.Tables.TAG_TO_DATA_ENTITY;
 
 @Repository
 @Slf4j
@@ -57,119 +126,78 @@ public class DataEntityRepositoryImpl
 
     private static final String DATA_ENTITY_CTE_NAME = "dataEntityCTE";
 
-    private static final String AGG_TYPES_FIELD = "type";
     private static final String AGG_TAGS_FIELD = "tag";
-    private static final String AGG_DSV_FIELD = "dataset_version";
-    private static final String AGG_MF_FIELD = "metadata_field";
-    private static final String AGG_MFV_FIELD = "metadata_field_value";
     private static final String AGG_OWNERSHIP_FIELD = "ownership";
     private static final String AGG_OWNER_FIELD = "owner";
     private static final String AGG_ROLE_FIELD = "role";
     private static final String AGG_ALERT_FIELD = "alert";
-    private static final String AGG_GROUP_ENTITY_FIELD = "group_entity";
-    private static final String AGG_SUB_GROUP_ENTITY_FIELD = "subgroup_entity";
     private static final String AGG_PARENT_ENTITY_FIELD = "parent_entity";
-    private static final String CHILDREN_COUNT_FIELD = "children_count";
 
     public static final TypeReference<Map<String, ?>> SPECIFIC_ATTRIBUTES_TYPE_REFERENCE = new TypeReference<>() {
     };
 
     private final JooqFTSHelper jooqFTSHelper;
     private final JooqRecordHelper jooqRecordHelper;
-    private final TypeEntityRelationRepository typeEntityRelationRepository;
+
     private final DataEntityTaskRunRepository dataEntityTaskRunRepository;
+    private final MetadataFieldValueRepository metadataFieldValueRepository;
+    private final DatasetVersionRepository datasetVersionRepository;
 
     public DataEntityRepositoryImpl(final DSLContext dslContext,
                                     final JooqQueryHelper jooqQueryHelper,
                                     final JooqFTSHelper jooqFTSHelper,
                                     final JooqRecordHelper jooqRecordHelper,
-                                    final TypeEntityRelationRepository typeEntityRelationRepository,
-                                    final DataEntityTaskRunRepository dataEntityTaskRunRepository) {
+                                    final DataEntityTaskRunRepository dataEntityTaskRunRepository,
+                                    final MetadataFieldValueRepository metadataFieldValueRepository,
+                                    final DatasetVersionRepository datasetVersionRepository) {
         super(dslContext, jooqQueryHelper, DATA_ENTITY, DATA_ENTITY.ID, null, DataEntityDimensionsDto.class);
 
         this.jooqFTSHelper = jooqFTSHelper;
         this.jooqRecordHelper = jooqRecordHelper;
-        this.typeEntityRelationRepository = typeEntityRelationRepository;
         this.dataEntityTaskRunRepository = dataEntityTaskRunRepository;
+        this.metadataFieldValueRepository = metadataFieldValueRepository;
+        this.datasetVersionRepository = datasetVersionRepository;
     }
 
     @Override
     public Optional<DataEntityDimensionsDto> get(final long id) {
         final DataEntitySelectConfig config = DataEntitySelectConfig.builder()
             .cteSelectConditions(singletonList(DATA_ENTITY.ID.eq(id)))
-            .includeDimensions(true)
             .build();
 
-        return dataEntitySelect(config).fetchOptional(this::mapDimensionRecord);
+        return dataEntitySelect(config)
+            .fetchOptional(this::mapDimensionRecord)
+            .map(this::enrichDataEntityDimensionsDto);
     }
 
     @Override
-    @Transactional
-    public List<DataEntityDto> bulkCreate(final List<DataEntityDto> dtos) {
-        if (dtos.isEmpty()) {
+    public List<DataEntityPojo> bulkCreate(final List<DataEntityPojo> pojos) {
+        if (pojos.isEmpty()) {
             return List.of();
         }
 
-        final Map<String, DataEntityDto> dtoDict = dtos.stream()
-            .collect(Collectors.toMap(d -> d.getDataEntity().getOddrn(), identity()));
-
-        final List<DataEntityPojo> createdDataEntities = bulkInsert(
-            dtos.stream().map(DataEntityDto::getDataEntity).collect(Collectors.toList()),
-            DataEntityPojo.class
-        );
-
-        final List<TypeEntityRelationPojo> typeRelations = createdDataEntities.stream()
-            .flatMap(pojo -> dtoDict.get(pojo.getOddrn())
-                .getTypes()
-                .stream()
-                .map(t -> new TypeEntityRelationPojo()
-                    .setDataEntityId(pojo.getId())
-                    .setDataEntityTypeId(t.getId())))
-            .collect(Collectors.toList());
-
-        typeEntityRelationRepository.bulkCreate(typeRelations);
-
-        return createdDataEntities
-            .stream()
-            .map(p -> {
-                final DataEntityDto dto = dtoDict.get(p.getOddrn());
-
-                return DataEntityDto.builder()
-                    .dataEntity(dto.getDataEntity().setId(p.getId()))
-                    .types(dto.getTypes())
-                    .build();
-            })
-            .collect(Collectors.toList());
+        return bulkInsert(pojos, DataEntityPojo.class);
     }
 
     @Override
-    @Transactional
-    public List<DataEntityDto> bulkUpdate(final List<DataEntityDto> dtos) {
-        final List<DataEntityRecord> records = dtos.stream()
-            .map(DataEntityDto::getDataEntity)
+    public List<DataEntityPojo> bulkUpdate(final List<DataEntityPojo> pojos) {
+        if (pojos.isEmpty()) {
+            return List.of();
+        }
+
+        final List<DataEntityRecord> records = pojos.stream()
             .map(e -> dslContext.newRecord(recordTable, e))
-            .peek(r -> {
-                r.changed(DATA_ENTITY.INTERNAL_DESCRIPTION, false);
-                r.changed(DATA_ENTITY.INTERNAL_NAME, false);
-                r.changed(DATA_ENTITY.VIEW_COUNT, false);
-                r.changed(DATA_ENTITY.EXCLUDE_FROM_SEARCH, false);
-            })
+            .map(r -> changedToFalse(r, List.of(
+                DATA_ENTITY.INTERNAL_DESCRIPTION,
+                DATA_ENTITY.INTERNAL_NAME,
+                DATA_ENTITY.VIEW_COUNT,
+                DATA_ENTITY.EXCLUDE_FROM_SEARCH
+            )))
             .collect(Collectors.toList());
-
-        final List<TypeEntityRelationPojo> typeRelations = dtos
-            .stream()
-            .flatMap(d -> d.getTypes().stream().map(
-                t -> new TypeEntityRelationPojo()
-                    .setDataEntityId(d.getDataEntity().getId())
-                    .setDataEntityTypeId(t.getId())
-            ))
-            .collect(Collectors.toList());
-
-        typeEntityRelationRepository.bulkCreate(typeRelations);
 
         dslContext.batchUpdate(records).execute();
 
-        return dtos;
+        return pojos;
     }
 
     @Override
@@ -199,7 +227,7 @@ public class DataEntityRepositoryImpl
         return Page.<DataEntityDimensionsDto>builder()
             .hasNext(false)
             .total(fetchCount(query))
-            .data(listByConfig(DataEntitySelectConfig.builder().includeDimensions(true).build()))
+            .data(listByConfig(DataEntitySelectConfig.builder().build()))
             .build();
     }
 
@@ -215,10 +243,10 @@ public class DataEntityRepositoryImpl
             .join(SEARCH_ENTRYPOINT).on(SEARCH_ENTRYPOINT.DATA_ENTITY_ID.eq(DATA_ENTITY.ID))
             .leftJoin(TAG_TO_DATA_ENTITY).on(TAG_TO_DATA_ENTITY.DATA_ENTITY_ID.eq(DATA_ENTITY.ID))
             .leftJoin(TAG).on(TAG_TO_DATA_ENTITY.TAG_ID.eq(TAG.ID))
+            // TODO: if owner is null no need to join
             .leftJoin(OWNERSHIP).on(OWNERSHIP.DATA_ENTITY_ID.eq(DATA_ENTITY.ID))
             .leftJoin(OWNER).on(OWNERSHIP.OWNER_ID.eq(OWNER.ID))
             .join(DATA_SOURCE).on(DATA_SOURCE.ID.eq(DATA_ENTITY.DATA_SOURCE_ID))
-            .join(DATA_ENTITY_SUBTYPE).on(DATA_ENTITY_SUBTYPE.ID.eq(DATA_ENTITY.SUBTYPE_ID))
             .where(jooqFTSHelper.facetStateConditions(state, true, true))
             .and(DATA_ENTITY.HOLLOW.isFalse())
             .and(DATA_ENTITY.EXCLUDE_FROM_SEARCH.isNull().or(DATA_ENTITY.EXCLUDE_FROM_SEARCH.isFalse()));
@@ -238,17 +266,32 @@ public class DataEntityRepositoryImpl
     public Collection<DataEntityDetailsDto> listDetailsByOddrns(final Collection<String> oddrns) {
         final DataEntitySelectConfig config = DataEntitySelectConfig.builder()
             .cteSelectConditions(singletonList(DATA_ENTITY.ODDRN.in(CollectionUtils.emptyIfNull(oddrns))))
-            .includeDimensionsAndDetails(true)
             .build();
 
-        return enrichDataEntityDetailsDto(dataEntitySelect(config)
+        return enrichDataEntityDimensionsDto(dataEntitySelect(config)
             .fetchStream()
             .map(this::mapDetailsRecord)
             .collect(Collectors.toList()));
     }
 
     @Override
-    public List<DataEntityDimensionsDto> listAllByOddrns(final Collection<String> oddrns) {
+    public List<DataEntityDto> listDtosByOddrns(final Collection<String> oddrns) {
+        if (CollectionUtils.isEmpty(oddrns)) {
+            return emptyList();
+        }
+
+        final DataEntitySelectConfig config = DataEntitySelectConfig.builder()
+            .cteSelectConditions(singletonList(DATA_ENTITY.ODDRN.in(oddrns)))
+            .build();
+
+        return dataEntitySelect(config)
+            .fetchStream()
+            .map(this::mapDtoRecord)
+            .toList();
+    }
+
+    @Override
+    public List<DataEntityDimensionsDto> listDimensionsByOddrns(final Collection<String> oddrns) {
         return listAllByOddrns(oddrns, null, null, false);
     }
 
@@ -262,7 +305,6 @@ public class DataEntityRepositoryImpl
 
         DataEntitySelectConfig.DataEntitySelectConfigBuilder configBuilder = DataEntitySelectConfig.builder()
             .cteSelectConditions(singletonList(DATA_ENTITY.ODDRN.in(oddrns)))
-            .includeDimensions(true)
             .includeHollow(!skipHollow);
 
         if (page != null && size != null) {
@@ -276,34 +318,34 @@ public class DataEntityRepositoryImpl
     @Override
     public List<DataEntityDimensionsDto> listByType(final int page,
                                                     final int size,
-                                                    final long typeId,
-                                                    final Long subTypeId) {
-        DataEntitySelectConfig.DataEntitySelectConfigBuilder configBuilder = DataEntitySelectConfig
+                                                    final int typeId,
+                                                    final Integer subTypeId) {
+        final List<Condition> cteSelectConditions = Stream
+            .of(DATA_ENTITY.TYPE_IDS.contains(new Integer[] {typeId}),
+                subTypeId != null ? DATA_ENTITY.SUBTYPE_ID.eq(subTypeId) : null)
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+
+        final DataEntitySelectConfig config = DataEntitySelectConfig
             .builder()
-            .selectConditions(singletonList(TYPE_ENTITY_RELATION.DATA_ENTITY_TYPE_ID.eq(typeId)))
-            .includeDimensions(true)
-            .cteLimitOffset(new DataEntitySelectConfig.LimitOffset(size, (page - 1) * size));
+            .cteSelectConditions(cteSelectConditions)
+            .cteLimitOffset(new DataEntitySelectConfig.LimitOffset(size, (page - 1) * size))
+            .build();
 
-        if (subTypeId != null) {
-            configBuilder =
-                configBuilder.cteSelectConditions(singletonList(DATA_ENTITY.SUBTYPE_ID.eq(subTypeId)));
-        }
-
-        return listByConfig(configBuilder.build());
+        return listByConfig(config);
     }
 
     @Override
     public List<DataEntityDto> listByOwner(final int page, final int size, final long ownerId) {
         final DataEntitySelectConfig config = DataEntitySelectConfig.builder()
             .selectConditions(singletonList(OWNERSHIP.OWNER_ID.eq(ownerId)))
-            .includeDimensions(true)
             .build();
 
         return dataEntitySelect(config)
             .limit(size)
             .offset((page - 1) * size)
             .fetchStream()
-            .map(this::mapDimensionRecord)
+            .map(this::mapDtoRecord)
             .collect(Collectors.toList());
     }
 
@@ -314,7 +356,6 @@ public class DataEntityRepositoryImpl
                                                      final LineageStreamKind streamKind) {
         final DataEntitySelectConfig config = DataEntitySelectConfig.builder()
             .selectConditions(singletonList(OWNERSHIP.OWNER_ID.eq(ownerId)))
-            .includeDimensions(true)
             .build();
 
         final Set<String> associatedOddrns = dataEntitySelect(config)
@@ -336,7 +377,6 @@ public class DataEntityRepositoryImpl
     public List<? extends DataEntityDto> listPopular(final int page, final int size) {
         final DataEntitySelectConfig config = DataEntitySelectConfig.builder()
             .cteLimitOffset(new DataEntitySelectConfig.LimitOffset(size, (page - 1) * size))
-            .includeDimensions(true)
             .orderBy(DATA_ENTITY.VIEW_COUNT.sort(SortOrder.DESC))
             .build();
 
@@ -344,14 +384,15 @@ public class DataEntityRepositoryImpl
     }
 
     @Override
+    @Transactional
     public Optional<DataEntityDetailsDto> getDetails(final long id) {
         final DataEntitySelectConfig config = DataEntitySelectConfig.builder()
             .cteSelectConditions(singletonList(DATA_ENTITY.ID.eq(id)))
-            .includeDimensionsAndDetails(true)
             .build();
 
         return dataEntitySelect(config)
             .fetchOptional(this::mapDetailsRecord)
+            .map(this::enrichDataEntityDimensionsDto)
             .map(this::enrichDataEntityDetailsDto);
     }
 
@@ -359,17 +400,19 @@ public class DataEntityRepositoryImpl
     public List<DataEntityDimensionsDto> getDataEntityGroupsChildren(final Long dataEntityGroupId,
                                                                      final Integer page,
                                                                      final Integer size) {
-        final var config = DataEntitySelectConfig
+        final DataEntitySelectConfig config = DataEntitySelectConfig
             .builder()
             .selectConditions(List.of(DATA_ENTITY.as(AGG_PARENT_ENTITY_FIELD).ID.eq(dataEntityGroupId)))
-            .includeDimensions(true)
             .build();
-        return dataEntitySelect(config)
+
+        final List<DataEntityDimensionsDto> entities = dataEntitySelect(config)
             .limit(size)
             .offset((page - 1) * size)
             .fetchStream()
             .map(this::mapDimensionRecord)
-            .collect(Collectors.toList());
+            .toList();
+
+        return enrichDataEntityDimensionsDto(entities);
     }
 
     @Override
@@ -380,6 +423,7 @@ public class DataEntityRepositoryImpl
     }
 
     @Override
+    @Transactional
     public Page<DataEntityDimensionsDto> findByState(final FacetStateDto state,
                                                      final int page,
                                                      final int size,
@@ -396,7 +440,6 @@ public class DataEntityRepositoryImpl
         DataEntitySelectConfig.DataEntitySelectConfigBuilder builder = DataEntitySelectConfig
             .builder()
             .cteSelectConditions(conditionsPair.getLeft())
-            .includeDimensions(true)
             .selectConditions(joinConditions);
 
         if (StringUtils.isNotEmpty(state.getQuery())) {
@@ -413,10 +456,10 @@ public class DataEntityRepositoryImpl
             .limit(size)
             .fetchStream()
             .map(this::mapDimensionRecord)
-            .collect(Collectors.toList());
+            .toList();
 
         return Page.<DataEntityDimensionsDto>builder()
-            .data(entities)
+            .data(enrichDataEntityDimensionsDto(entities))
             .hasNext(true)
             .total(total)
             .build();
@@ -588,25 +631,13 @@ public class DataEntityRepositoryImpl
 
         final Table<Record> deCte = dataEntitySelect.asTable(deCteName);
 
-        final List<Field<?>> selectFields = Stream
-            .of(
-                deCte.fields(),
-                DATA_ENTITY_SUBTYPE.fields()
-            )
-            .flatMap(Arrays::stream)
-            .collect(Collectors.toList());
-
         return dslContext.with(deCteName)
             .asMaterialized(dataEntitySelect)
-            .select(selectFields)
-            .select(jsonArrayAgg(field(DATA_ENTITY_TYPE.asterisk().toString())).as(AGG_TYPES_FIELD))
+            .select(deCte.fields())
             .select(jsonArrayAgg(field(ALERT.asterisk().toString())).as(AGG_ALERT_FIELD))
             .from(deCteName)
-            .join(TYPE_ENTITY_RELATION).on(deCte.field(DATA_ENTITY.ID).eq(TYPE_ENTITY_RELATION.DATA_ENTITY_ID))
-            .join(DATA_ENTITY_TYPE).on(TYPE_ENTITY_RELATION.DATA_ENTITY_TYPE_ID.eq(DATA_ENTITY_TYPE.ID))
-            .join(DATA_ENTITY_SUBTYPE).on(deCte.field(DATA_ENTITY.SUBTYPE_ID).eq(DATA_ENTITY_SUBTYPE.ID))
             .leftJoin(ALERT).on(ALERT.DATA_ENTITY_ODDRN.eq(deCte.field(DATA_ENTITY.ODDRN)))
-            .groupBy(selectFields)
+            .groupBy(deCte.fields())
             .orderBy(
                 jooqFTSHelper.ftsRanking(searchVectorAlias, query),
                 deCte.field(DATA_ENTITY.INTERNAL_NAME),
@@ -624,7 +655,7 @@ public class DataEntityRepositoryImpl
             return Optional.empty();
         }
 
-        final Map<String, DataEntityDimensionsDto> dtoDict = listAllByOddrns(entitiesOddrns)
+        final Map<String, DataEntityDimensionsDto> dtoDict = listDimensionsByOddrns(entitiesOddrns)
             .stream()
             .collect(Collectors.toMap(d -> d.getDataEntity().getOddrn(), identity()));
 
@@ -683,7 +714,7 @@ public class DataEntityRepositoryImpl
 
         final Map<DataEntityDto, Set<String>> groupRepository = fetchGroupRepository(oddrnsToFetch);
 
-        final Map<String, DataEntityDimensionsDto> dtoRepository = listAllByOddrns(oddrnsToFetch)
+        final Map<String, DataEntityDimensionsDto> dtoRepository = listDimensionsByOddrns(oddrnsToFetch)
             .stream()
             .collect(Collectors.toMap(d -> d.getDataEntity().getOddrn(), identity()));
 
@@ -924,86 +955,47 @@ public class DataEntityRepositoryImpl
     }
 
     private List<DataEntityDimensionsDto> listByConfig(final DataEntitySelectConfig config) {
-        return dataEntitySelect(config)
+        final List<DataEntityDimensionsDto> entities = dataEntitySelect(config)
             .fetchStream()
             .map(this::mapDimensionRecord)
-            .collect(Collectors.toList());
+            .toList();
+
+        return enrichDataEntityDimensionsDto(entities);
     }
 
-    @SuppressWarnings("ConstantConditions")
     private SelectLimitStep<Record> dataEntitySelect(final DataEntitySelectConfig config) {
         final Name deCteName = name(DATA_ENTITY_CTE_NAME);
         final Field<?> searchVectorAlias = field("sv_alias");
-        final DataEntity groupsAlias = DATA_ENTITY.as(AGG_GROUP_ENTITY_FIELD);
-        final DataEntity subGroupEntitiesAlias = DATA_ENTITY.as(AGG_SUB_GROUP_ENTITY_FIELD);
-        final GroupEntityRelations groupsRelations = GROUP_ENTITY_RELATIONS.as("groups");
-        final GroupParentGroupRelations childrenRelations = GROUP_PARENT_GROUP_RELATIONS.as("children");
-        final DataEntity parentAlias = DATA_ENTITY.as(AGG_PARENT_ENTITY_FIELD);
 
-        final Select<Record> dataEntitySelect = getDataEntityCTESelect(config, searchVectorAlias);
+        final Select<Record> dataEntitySelect = cteDataEntitySelect(config, searchVectorAlias);
         final Table<Record> deCte = dataEntitySelect.asTable(deCteName);
 
         final List<Field<?>> selectFields = Stream
             .of(
                 deCte.fields(),
                 NAMESPACE.fields(),
-                DATA_SOURCE.fields(),
-                DATA_ENTITY_SUBTYPE.fields()
+                DATA_SOURCE.fields()
             )
             .flatMap(Arrays::stream)
             .collect(Collectors.toList());
 
-        SelectSelectStep<Record> selectStep = dslContext.with(deCteName)
+        final SelectHavingStep<Record> groupByStep = dslContext.with(deCteName)
             .asMaterialized(dataEntitySelect)
             .select(selectFields)
-            .select(jsonArrayAgg(field(DATA_ENTITY_TYPE.asterisk().toString())).as(AGG_TYPES_FIELD))
-            .select(jsonArrayAgg(field(ALERT.asterisk().toString())).as(AGG_ALERT_FIELD));
-
-        if (config.isIncludeDimensionsAndDetails()) {
-            selectStep = selectStep
-                .select(jsonArrayAgg(field(TAG.asterisk().toString())).as(AGG_TAGS_FIELD))
-                .select(jsonArrayAgg(field(OWNER.asterisk().toString())).as(AGG_OWNER_FIELD))
-                .select(jsonArrayAgg(field(ROLE.asterisk().toString())).as(AGG_ROLE_FIELD))
-                .select(jsonArrayAgg(field(OWNERSHIP.asterisk().toString())).as(AGG_OWNERSHIP_FIELD))
-                .select(jsonArrayAgg(field(DATASET_VERSION.asterisk().toString())).as(AGG_DSV_FIELD))
-                .select(jsonArrayAgg(field(METADATA_FIELD.asterisk().toString())).as(AGG_MF_FIELD))
-                .select(jsonArrayAgg(field(METADATA_FIELD_VALUE.asterisk().toString())).as(AGG_MFV_FIELD))
-                .select(jsonArrayAgg(field(groupsAlias.asterisk().toString())).as(AGG_GROUP_ENTITY_FIELD))
-                .select(jsonArrayAgg(field(subGroupEntitiesAlias.asterisk().toString())).as(AGG_SUB_GROUP_ENTITY_FIELD))
-                .select(jsonArrayAgg(field(parentAlias.asterisk().toString())).as(AGG_PARENT_ENTITY_FIELD))
-                .select(countDistinct(field(childrenRelations.GROUP_ODDRN)).as(CHILDREN_COUNT_FIELD));
-        } else if (config.isIncludeDimensions()) {
-            selectStep = selectStep
-                .select(jsonArrayAgg(field(TAG.asterisk().toString())).as(AGG_TAGS_FIELD))
-                .select(jsonArrayAgg(field(OWNER.asterisk().toString())).as(AGG_OWNER_FIELD))
-                .select(jsonArrayAgg(field(ROLE.asterisk().toString())).as(AGG_ROLE_FIELD))
-                .select(jsonArrayAgg(field(OWNERSHIP.asterisk().toString())).as(AGG_OWNERSHIP_FIELD))
-                .select(jsonArrayAgg(field(subGroupEntitiesAlias.asterisk().toString())).as(AGG_SUB_GROUP_ENTITY_FIELD))
-                .select(countDistinct(field(childrenRelations.GROUP_ODDRN)).as(CHILDREN_COUNT_FIELD));
-        }
-
-        SelectOnConditionStep<Record> joinStep = selectStep
+            .select(jsonArrayAgg(field(TAG.asterisk().toString())).as(AGG_TAGS_FIELD))
+            .select(jsonArrayAgg(field(OWNER.asterisk().toString())).as(AGG_OWNER_FIELD))
+            .select(jsonArrayAgg(field(ROLE.asterisk().toString())).as(AGG_ROLE_FIELD))
+            .select(jsonArrayAgg(field(OWNERSHIP.asterisk().toString())).as(AGG_OWNERSHIP_FIELD))
             .from(deCteName)
-            .leftJoin(TYPE_ENTITY_RELATION).on(deCte.field(DATA_ENTITY.ID).eq(TYPE_ENTITY_RELATION.DATA_ENTITY_ID))
-            .leftJoin(DATA_ENTITY_TYPE).on(TYPE_ENTITY_RELATION.DATA_ENTITY_TYPE_ID.eq(DATA_ENTITY_TYPE.ID))
-            .leftJoin(DATA_ENTITY_SUBTYPE).on(deCte.field(DATA_ENTITY.SUBTYPE_ID).eq(DATA_ENTITY_SUBTYPE.ID))
-            .leftJoin(DATA_SOURCE).on(deCte.field(DATA_ENTITY.DATA_SOURCE_ID).eq(DATA_SOURCE.ID))
-            .leftJoin(NAMESPACE).on(DATA_SOURCE.NAMESPACE_ID.eq(NAMESPACE.ID))
-            .leftJoin(ALERT).on(ALERT.DATA_ENTITY_ODDRN.eq(deCte.field(DATA_ENTITY.ODDRN)));
-
-        if (config.isIncludeDimensionsAndDetails()) {
-            joinStep = addDimensionJoins(joinStep, deCte, parentAlias, subGroupEntitiesAlias, childrenRelations)
-                .leftJoin(DATASET_VERSION).on(deCte.field(DATA_ENTITY.ODDRN).eq(DATASET_VERSION.DATASET_ODDRN))
-                .leftJoin(METADATA_FIELD_VALUE)
-                .on(deCte.field(DATA_ENTITY.ID).eq(METADATA_FIELD_VALUE.DATA_ENTITY_ID))
-                .leftJoin(METADATA_FIELD).on(METADATA_FIELD_VALUE.METADATA_FIELD_ID.eq(METADATA_FIELD.ID))
-                .leftJoin(groupsRelations).on(groupsRelations.DATA_ENTITY_ODDRN.eq(deCte.field(DATA_ENTITY.ODDRN)))
-                .leftJoin(groupsAlias).on(groupsRelations.GROUP_ODDRN.eq(groupsAlias.ODDRN));
-        } else if (config.isIncludeDimensions()) {
-            joinStep = addDimensionJoins(joinStep, deCte, parentAlias, subGroupEntitiesAlias, childrenRelations);
-        }
-
-        final SelectHavingStep<Record> groupByStep = joinStep
+            .leftJoin(DATA_SOURCE)
+            .on(DATA_SOURCE.ID.eq(jooqQueryHelper.getField(deCte, DATA_ENTITY.DATA_SOURCE_ID)))
+            .leftJoin(NAMESPACE).on(NAMESPACE.ID.eq(DATA_SOURCE.NAMESPACE_ID))
+            .leftJoin(TAG_TO_DATA_ENTITY)
+            .on(TAG_TO_DATA_ENTITY.DATA_ENTITY_ID.eq(jooqQueryHelper.getField(deCte, DATA_ENTITY.ID)))
+            .leftJoin(TAG).on(TAG.ID.eq(TAG_TO_DATA_ENTITY.TAG_ID))
+            .leftJoin(OWNERSHIP).on(OWNERSHIP.DATA_ENTITY_ID.eq(jooqQueryHelper.getField(deCte, DATA_ENTITY.ID)))
+            .leftJoin(OWNER).on(OWNER.ID.eq(OWNERSHIP.OWNER_ID))
+            .leftJoin(ROLE).on(ROLE.ID.eq(OWNERSHIP.ROLE_ID))
             .where(ListUtils.emptyIfNull(config.getSelectConditions()))
             .groupBy(selectFields);
 
@@ -1012,66 +1004,205 @@ public class DataEntityRepositoryImpl
             : groupByStep;
     }
 
-    private SelectOnConditionStep<Record> addDimensionJoins(final SelectOnConditionStep<Record> joinStep,
-                                                            final Table<Record> deCte,
-                                                            final DataEntity parentAlias,
-                                                            final DataEntity subGroupEntitiesAlias,
-                                                            final GroupParentGroupRelations childrenRelations) {
-        final GroupEntityRelations entitiesRelations = GROUP_ENTITY_RELATIONS.as("entities");
-        final GroupParentGroupRelations parentsRelations = GROUP_PARENT_GROUP_RELATIONS.as("parents");
-        return joinStep
-            .leftJoin(TAG_TO_DATA_ENTITY).on(deCte.field(DATA_ENTITY.ID).eq(TAG_TO_DATA_ENTITY.DATA_ENTITY_ID))
-            .leftJoin(TAG).on(TAG_TO_DATA_ENTITY.TAG_ID.eq(TAG.ID))
-            .leftJoin(OWNERSHIP).on(deCte.field(DATA_ENTITY.ID).eq(OWNERSHIP.DATA_ENTITY_ID))
-            .leftJoin(OWNER).on(OWNERSHIP.OWNER_ID.eq(OWNER.ID))
-            .leftJoin(ROLE).on(OWNERSHIP.ROLE_ID.eq(ROLE.ID))
+    private void enrichDatasetVersions(final DataEntityDetailsDto dto) {
+        if (!ArrayUtils.contains(dto.getDataEntity().getTypeIds(), DataEntityTypeDto.DATA_SET.getId())) {
+            return;
+        }
 
-            .leftJoin(entitiesRelations)
-            .on(entitiesRelations.GROUP_ODDRN.eq(deCte.field(DATA_ENTITY.ODDRN)))
-            .leftJoin(subGroupEntitiesAlias)
-            .on(entitiesRelations.DATA_ENTITY_ODDRN.eq(subGroupEntitiesAlias.ODDRN))
-            .leftJoin(parentsRelations).on(parentsRelations.GROUP_ODDRN.eq(deCte.field(DATA_ENTITY.ODDRN)))
-            .leftJoin(parentAlias).on(parentsRelations.PARENT_GROUP_ODDRN.eq(parentAlias.ODDRN))
+        final List<DatasetVersionPojo> versions = datasetVersionRepository.getVersions(dto.getDataEntity().getOddrn());
 
-            .leftJoin(childrenRelations).on(childrenRelations.PARENT_GROUP_ODDRN.eq(deCte.field(DATA_ENTITY.ODDRN)));
+        dto.setDatasetVersions(versions);
     }
 
-    private DataEntityDetailsDto enrichDataEntityDetailsDto(final DataEntityDetailsDto detailsDto) {
-        final Set<String> deps = detailsDto.getSpecificAttributes().values().stream()
+    private void enrichDetailsWithMetadata(final DataEntityDetailsDto dto) {
+        dto.setMetadata(metadataFieldValueRepository.getDtosByDataEntityId(dto.getDataEntity().getId()));
+    }
+
+    private <T extends DataEntityDimensionsDto> void enrichDEGDetails(final T dto) {
+        if (!ArrayUtils.contains(dto.getDataEntity().getTypeIds(), DataEntityTypeDto.DATA_ENTITY_GROUP.getId())) {
+            return;
+        }
+
+        final List<DataEntityPojo> entities = dslContext.select(DATA_ENTITY.fields())
+            .from(GROUP_ENTITY_RELATIONS)
+            .leftJoin(DATA_ENTITY).on(DATA_ENTITY.ODDRN.eq(GROUP_ENTITY_RELATIONS.DATA_ENTITY_ODDRN))
+            .where(GROUP_ENTITY_RELATIONS.GROUP_ODDRN.eq(dto.getDataEntity().getOddrn()))
+            .fetchStreamInto(DataEntityPojo.class)
+            .toList();
+
+        Long childrenCount = dslContext.selectCount()
+            .from(GROUP_PARENT_GROUP_RELATIONS)
+            .where(GROUP_PARENT_GROUP_RELATIONS.GROUP_ODDRN.eq(dto.getDataEntity().getOddrn()))
+            .fetchOneInto(Long.class);
+
+        if (childrenCount == null) {
+            childrenCount = 0L;
+        }
+
+        dto.setGroupsDto(new DataEntityDimensionsDto.DataEntityGroupDimensionsDto(
+            entities,
+            entities.size() + childrenCount.intValue(),
+            childrenCount != 0L
+        ));
+    }
+
+    private <T extends DataEntityDimensionsDto> void enrichDEGDetails(final List<T> dtos) {
+        final Set<String> degOddrns = dtos.stream()
+            .map(DataEntityDto::getDataEntity)
+            .filter(d -> ArrayUtils.contains(d.getTypeIds(), DataEntityTypeDto.DATA_ENTITY_GROUP.getId()))
+            .map(DataEntityPojo::getOddrn)
+            .collect(Collectors.toSet());
+
+        if (degOddrns.isEmpty()) {
+            return;
+        }
+
+        final Map<String, List<DataEntityPojo>> entityRepository = dslContext
+            .select(GROUP_ENTITY_RELATIONS.GROUP_ODDRN)
+            .select(DATA_ENTITY.fields())
+            .from(GROUP_ENTITY_RELATIONS)
+            .leftJoin(DATA_ENTITY).on(DATA_ENTITY.ODDRN.eq(GROUP_ENTITY_RELATIONS.DATA_ENTITY_ODDRN))
+            .where(GROUP_ENTITY_RELATIONS.GROUP_ODDRN.in(degOddrns))
+            .fetchGroups(GROUP_ENTITY_RELATIONS.GROUP_ODDRN, DataEntityPojo.class);
+
+        final Field<Long> childrenCountField = field("children_count", Long.class);
+
+        final Map<String, Long> countRepository = dslContext
+            .select(GROUP_PARENT_GROUP_RELATIONS.PARENT_GROUP_ODDRN)
+            .select(count(GROUP_PARENT_GROUP_RELATIONS.GROUP_ODDRN).as(childrenCountField))
+            .from(GROUP_PARENT_GROUP_RELATIONS)
+            .where(GROUP_PARENT_GROUP_RELATIONS.PARENT_GROUP_ODDRN.in(degOddrns))
+            .groupBy(GROUP_PARENT_GROUP_RELATIONS.PARENT_GROUP_ODDRN)
+            .fetchMap(GROUP_PARENT_GROUP_RELATIONS.PARENT_GROUP_ODDRN, childrenCountField);
+
+        for (final T dto : dtos) {
+            final String oddrn = dto.getDataEntity().getOddrn();
+
+            if (!degOddrns.contains(oddrn)) {
+                continue;
+            }
+
+            final List<DataEntityPojo> entityList = ListUtils.emptyIfNull(entityRepository.get(oddrn));
+            final Long childrenCount = ObjectUtils.defaultIfNull(countRepository.get(oddrn), 0L);
+
+            dto.setGroupsDto(new DataEntityDimensionsDto.DataEntityGroupDimensionsDto(
+                entityList,
+                entityList.size() + childrenCount.intValue(),
+                childrenCount != 0L
+            ));
+        }
+    }
+
+    private <T extends DataEntityDimensionsDto> void enrichParentDEGs(final T dto) {
+        final Field<String> degOddrnField = field("deg_oddrn", String.class);
+        final String cteName = "cte";
+
+        final SelectOrderByStep<Record1<String>> cteSelect =
+            dslContext.select(GROUP_ENTITY_RELATIONS.GROUP_ODDRN.as(degOddrnField))
+                .from(GROUP_ENTITY_RELATIONS)
+                .where(GROUP_ENTITY_RELATIONS.DATA_ENTITY_ODDRN.eq(dto.getDataEntity().getOddrn()))
+                .union(dslContext.select(GROUP_PARENT_GROUP_RELATIONS.PARENT_GROUP_ODDRN.as(degOddrnField))
+                    .from(GROUP_PARENT_GROUP_RELATIONS)
+                    .where(GROUP_PARENT_GROUP_RELATIONS.GROUP_ODDRN.eq(dto.getDataEntity().getOddrn())));
+
+        final Table<Record1<String>> selectTable = cteSelect.asTable(cteName);
+
+        final List<DataEntityPojo> parentGroups = dslContext.with(cteName)
+            .as(cteSelect)
+            .select(DATA_ENTITY.fields())
+            .from(cteName)
+            .join(DATA_ENTITY).on(DATA_ENTITY.ODDRN.eq(jooqQueryHelper.getField(selectTable, degOddrnField)))
+            .fetchStreamInto(DataEntityPojo.class)
+            .toList();
+
+        dto.setParentGroups(parentGroups);
+    }
+
+    private <T extends DataEntityDimensionsDto> void enrichParentDEGs(final List<T> dto) {
+        final Set<String> oddrns = dto.stream()
+            .map(d -> d.getDataEntity().getOddrn())
+            .collect(Collectors.toSet());
+
+        final Field<String> degOddrnField = field("deg_oddrn", String.class);
+        final String cteName = "cte";
+
+        final SelectOrderByStep<Record> cteSelect = dslContext
+            .select(GROUP_ENTITY_RELATIONS.DATA_ENTITY_ODDRN)
+            .select(GROUP_ENTITY_RELATIONS.GROUP_ODDRN.as(degOddrnField))
+            .from(GROUP_ENTITY_RELATIONS)
+            .where(GROUP_ENTITY_RELATIONS.DATA_ENTITY_ODDRN.in(oddrns))
+            .union(dslContext
+                .select(GROUP_PARENT_GROUP_RELATIONS.PARENT_GROUP_ODDRN)
+                .select(GROUP_PARENT_GROUP_RELATIONS.GROUP_ODDRN.as(degOddrnField))
+                .from(GROUP_PARENT_GROUP_RELATIONS)
+                .where(GROUP_PARENT_GROUP_RELATIONS.GROUP_ODDRN.in(oddrns)));
+
+        final Table<Record> selectTable = cteSelect.asTable(cteName);
+
+        final Field<String> deOddrnField =
+            jooqQueryHelper.getField(selectTable, GROUP_ENTITY_RELATIONS.DATA_ENTITY_ODDRN);
+
+        final Map<String, List<DataEntityPojo>> repository = dslContext.with(cteName)
+            .as(cteSelect)
+            .select(deOddrnField)
+            .select(DATA_ENTITY.fields())
+            .from(cteName)
+            .join(DATA_ENTITY).on(DATA_ENTITY.ODDRN.eq(jooqQueryHelper.getField(selectTable, degOddrnField)))
+            .fetchGroups(deOddrnField, DataEntityPojo.class);
+
+        for (final T t : dto) {
+            t.setParentGroups(repository.get(t.getDataEntity().getOddrn()));
+        }
+    }
+
+    private DataEntityDetailsDto enrichDataEntityDetailsDto(final DataEntityDetailsDto dto) {
+        enrichDetailsWithMetadata(dto);
+        enrichDatasetVersions(dto);
+
+        return dto;
+    }
+
+    private <T extends DataEntityDimensionsDto> T enrichDataEntityDimensionsDto(final T dto) {
+        final Set<String> deps = dto.getSpecificAttributes().values().stream()
             .map(DataEntityAttributes::getDependentOddrns)
             .flatMap(Set::stream)
             .collect(Collectors.toSet());
 
-        final Map<String, DataEntityDimensionsDto> depsRepository = listAllByOddrns(deps)
+        final Map<String, DataEntityDto> depsRepository = listDtosByOddrns(deps)
             .stream()
-            .collect(Collectors.toMap(dto -> dto.getDataEntity().getOddrn(), identity()));
+            .collect(Collectors.toMap(d -> d.getDataEntity().getOddrn(), identity()));
 
-        enrichDataEntityDetailsDto(detailsDto, depsRepository);
+        enrichDataEntityDimensionsDto(dto, depsRepository);
+        enrichDEGDetails(dto);
+        enrichParentDEGs(dto);
 
-        return detailsDto;
+        return dto;
     }
 
-    private List<DataEntityDetailsDto> enrichDataEntityDetailsDto(final List<DataEntityDetailsDto> detailsDtos) {
-        final Set<String> deps = detailsDtos.stream().map(DataEntityDto::getSpecificAttributes)
+    private <T extends DataEntityDimensionsDto> List<T> enrichDataEntityDimensionsDto(final List<T> dtos) {
+        final Set<String> deps = dtos.stream().map(DataEntityDto::getSpecificAttributes)
             .map(Map::values)
             .flatMap(Collection::stream)
             .map(DataEntityAttributes::getDependentOddrns)
             .flatMap(Set::stream)
             .collect(Collectors.toSet());
 
-        final Map<String, DataEntityDimensionsDto> depsRepository = listAllByOddrns(deps)
+        final Map<String, DataEntityDto> depsRepository = listDtosByOddrns(deps)
             .stream()
             .collect(Collectors.toMap(dto -> dto.getDataEntity().getOddrn(), identity()));
 
-        for (final DataEntityDetailsDto detailsDto : detailsDtos) {
-            enrichDataEntityDetailsDto(detailsDto, depsRepository);
+        for (final T dto : dtos) {
+            enrichDataEntityDimensionsDto(dto, depsRepository);
         }
 
-        return detailsDtos;
+        enrichParentDEGs(dtos);
+        enrichDEGDetails(dtos);
+
+        return dtos;
     }
 
-    private void enrichDataEntityDetailsDto(final DataEntityDetailsDto dto,
-                                            final Map<String, DataEntityDimensionsDto> depsRepository) {
+    private void enrichDataEntityDimensionsDto(final DataEntityDimensionsDto dto,
+                                               final Map<String, DataEntityDto> depsRepository) {
         final Function<Collection<String>, Collection<? extends DataEntityDto>> fetcher = oddrns -> oddrns.stream()
             .map(depsRepository::get)
             .filter(Objects::nonNull)
@@ -1081,15 +1212,15 @@ public class DataEntityRepositoryImpl
             switch (t) {
                 case DATA_SET:
                     final DataSetAttributes dsa = (DataSetAttributes) attrs;
-                    final Collection<DatasetVersionPojo> datasetVersions =
-                        Optional.ofNullable(dto.getDataSetDetailsDto())
-                            .map(DataEntityDetailsDto.DataSetDetailsDto::datasetVersions)
-                            .orElse(null);
+
                     dto.setDataSetDetailsDto(new DataEntityDetailsDto.DataSetDetailsDto(
-                        dsa.getRowsCount(), dsa.getFieldsCount(), dsa.getConsumersCount(), datasetVersions
+                        dsa.getRowsCount(),
+                        dsa.getFieldsCount(),
+                        dsa.getConsumersCount()
                     ));
 
                     break;
+
                 case DATA_TRANSFORMER:
                     final DataTransformerAttributes dta = (DataTransformerAttributes) attrs;
                     final DataTransformerDetailsDto dataTransformerDetailsDto =
@@ -1099,6 +1230,7 @@ public class DataEntityRepositoryImpl
                     dto.setDataTransformerDetailsDto(dataTransformerDetailsDto);
 
                     break;
+
                 case DATA_QUALITY_TEST:
                     final DataQualityTestAttributes dqta = (DataQualityTestAttributes) attrs;
                     final DataEntityTaskRunPojo latestTaskRun = dataEntityTaskRunRepository
@@ -1111,6 +1243,7 @@ public class DataEntityRepositoryImpl
                             dqta.getExpectation().getAdditionalProperties());
                     dto.setDataQualityTestDetailsDto(dataQualityTestDetailsDto);
                     break;
+
                 case DATA_CONSUMER:
                     final DataConsumerAttributes dca = (DataConsumerAttributes) attrs;
 
@@ -1120,10 +1253,9 @@ public class DataEntityRepositoryImpl
                 case DATA_INPUT:
                     final DataInputAttributes dia = (DataInputAttributes) attrs;
 
-                    dto.setDataInputDetailsDto(DataInputDetailsDto.builder()
-                        .outputList(fetcher.apply(dia.getOutputListOddrn()))
-                        .build());
+                    dto.setDataInputDetailsDto(new DataInputDetailsDto(fetcher.apply(dia.getOutputListOddrn())));
                     break;
+
                 default:
                     break;
             }
@@ -1135,107 +1267,41 @@ public class DataEntityRepositoryImpl
 
         final DataEntityPojo dataEntity = jooqRecordHelper.extractRelation(deRecord, DATA_ENTITY, DataEntityPojo.class);
 
-        final Set<DataEntityTypePojo> types =
-            jooqRecordHelper.extractAggRelation(r, AGG_TYPES_FIELD, DataEntityTypePojo.class);
-
         return DataEntityDto.builder()
             .dataEntity(dataEntity)
             .hasAlerts(!jooqRecordHelper.extractAggRelation(r, AGG_ALERT_FIELD, AlertPojo.class).isEmpty())
-            .subtype(jooqRecordHelper.extractRelation(r, DATA_ENTITY_SUBTYPE, DataEntitySubtypePojo.class))
-            .specificAttributes(extractSpecificAttributes(dataEntity, types))
-            .types(types)
+            .specificAttributes(extractSpecificAttributes(dataEntity))
             .build();
     }
 
     private DataEntityDimensionsDto mapDimensionRecord(final Record r) {
         final Record deRecord = jooqRecordHelper.remapCte(r, DATA_ENTITY_CTE_NAME, DATA_ENTITY);
         final DataEntityPojo dataEntity = jooqRecordHelper.extractRelation(deRecord, DATA_ENTITY, DataEntityPojo.class);
-        final Set<DataEntityTypePojo> types =
-            jooqRecordHelper.extractAggRelation(r, AGG_TYPES_FIELD, DataEntityTypePojo.class);
 
         return DataEntityDimensionsDto.dimensionsBuilder()
             .dataEntity(dataEntity)
             .hasAlerts(!jooqRecordHelper.extractAggRelation(r, AGG_ALERT_FIELD, AlertPojo.class).isEmpty())
             .dataSource(jooqRecordHelper.extractRelation(r, DATA_SOURCE, DataSourcePojo.class))
-            .subtype(jooqRecordHelper.extractRelation(r, DATA_ENTITY_SUBTYPE, DataEntitySubtypePojo.class))
-            .specificAttributes(extractSpecificAttributes(dataEntity, types))
+            .specificAttributes(extractSpecificAttributes(dataEntity))
             .namespace(jooqRecordHelper.extractRelation(r, NAMESPACE, NamespacePojo.class))
             .ownership(extractOwnershipRelation(r))
-            .types(types)
             .tags(jooqRecordHelper.extractAggRelation(r, AGG_TAGS_FIELD, TagPojo.class))
-            .groupsDto(mapGroupDimensionsDto(r))
             .build();
     }
 
     private DataEntityDetailsDto mapDetailsRecord(final Record r) {
         final Record deRecord = jooqRecordHelper.remapCte(r, DATA_ENTITY_CTE_NAME, DATA_ENTITY);
         final DataEntityPojo dataEntity = jooqRecordHelper.extractRelation(deRecord, DATA_ENTITY, DataEntityPojo.class);
-        final Set<DataEntityTypePojo> types =
-            jooqRecordHelper.extractAggRelation(r, AGG_TYPES_FIELD, DataEntityTypePojo.class);
-        final Set<DataEntityPojo> groups =
-            jooqRecordHelper.extractAggRelation(r, AGG_GROUP_ENTITY_FIELD, DataEntityPojo.class);
-        final Set<DataEntityPojo> parents =
-            jooqRecordHelper.extractAggRelation(r, AGG_PARENT_ENTITY_FIELD, DataEntityPojo.class);
-        final boolean hasChildren = r.get(CHILDREN_COUNT_FIELD, Integer.class) != 0;
-
-        // ad-hoc solution until https://github.com/opendatadiscovery/odd-platform/issues/123 is fixed
-        final Set<DatasetVersionPojo> datasetVersions = jooqRecordHelper
-            .extractAggRelation(r, AGG_DSV_FIELD, DatasetVersionPojo.class)
-            .stream()
-            .sorted((d1, d2) -> d2.getVersion().compareTo(d1.getVersion()))
-            .collect(Collectors.toCollection(LinkedHashSet::new));
 
         return DataEntityDetailsDto.detailsBuilder()
             .dataEntity(dataEntity)
             .hasAlerts(!jooqRecordHelper.extractAggRelation(r, AGG_ALERT_FIELD, AlertPojo.class).isEmpty())
             .dataSource(jooqRecordHelper.extractRelation(r, DATA_SOURCE, DataSourcePojo.class))
-            .subtype(jooqRecordHelper.extractRelation(r, DATA_ENTITY_SUBTYPE, DataEntitySubtypePojo.class))
-            .dataEntityGroups(Sets.union(groups, parents))
-            .specificAttributes(extractSpecificAttributes(dataEntity, types))
+            .specificAttributes(extractSpecificAttributes(dataEntity))
             .namespace(jooqRecordHelper.extractRelation(r, NAMESPACE, NamespacePojo.class))
             .ownership(extractOwnershipRelation(r))
-            .types(types)
             .tags(jooqRecordHelper.extractAggRelation(r, AGG_TAGS_FIELD, TagPojo.class))
-            .dataSetDetailsDto(new DataEntityDetailsDto.DataSetDetailsDto(datasetVersions))
-            .metadata(extractMetadataRelation(r))
-            .dataEntityGroupDimensionsDto(mapGroupDimensionsDto(r))
-            .dataEntityGroupDetailsDto(new DataEntityDetailsDto.DataEntityGroupDetailsDto(hasChildren))
             .build();
-    }
-
-    private DataEntityDimensionsDto.DataEntityGroupDimensionsDto mapGroupDimensionsDto(final Record r) {
-        final Set<DataEntityPojo> entities =
-            jooqRecordHelper.extractAggRelation(r, AGG_SUB_GROUP_ENTITY_FIELD, DataEntityPojo.class);
-
-        return new DataEntityDimensionsDto.DataEntityGroupDimensionsDto(
-            entities,
-            entities.size() + r.get(CHILDREN_COUNT_FIELD, Integer.class)
-        );
-    }
-
-    private List<MetadataDto> extractMetadataRelation(final Record r) {
-        final Map<Long, MetadataFieldPojo> metadataFields = jooqRecordHelper
-            .extractAggRelation(r, AGG_MF_FIELD, MetadataFieldPojo.class)
-            .stream()
-            .collect(Collectors.toMap(MetadataFieldPojo::getId, identity()));
-
-        return jooqRecordHelper.extractAggRelation(r, AGG_MFV_FIELD, MetadataFieldValuePojo.class)
-            .stream()
-            .map(mfv -> {
-                final MetadataFieldPojo metadataField = metadataFields.get(mfv.getMetadataFieldId());
-                if (null == metadataField) {
-                    throw new IllegalArgumentException(String.format(
-                        "Corrupted metadata field value object -- no corresponding metadata field. MFV: %s",
-                        mfv));
-                }
-
-                return MetadataDto.builder()
-                    .metadataField(metadataField)
-                    .metadataFieldValue(mfv)
-                    .build();
-            })
-            .filter(Objects::nonNull)
-            .collect(Collectors.toList());
     }
 
     private List<OwnershipDto> extractOwnershipRelation(final Record r) {
@@ -1271,9 +1337,7 @@ public class DataEntityRepositoryImpl
             .collect(Collectors.toList());
     }
 
-    private Map<DataEntityType, DataEntityAttributes> extractSpecificAttributes(
-        final DataEntityPojo dataEntity,
-        final Collection<DataEntityTypePojo> types
+    private Map<DataEntityTypeDto, DataEntityAttributes> extractSpecificAttributes(final DataEntityPojo dataEntity
     ) {
         if (dataEntity.getHollow()) {
             return emptyMap();
@@ -1284,10 +1348,8 @@ public class DataEntityRepositoryImpl
             SPECIFIC_ATTRIBUTES_TYPE_REFERENCE
         );
 
-        return types
+        return DataEntityTypeDto.findByIds(dataEntity.getTypeIds())
             .stream()
-            .map(DataEntityTypePojo::getName)
-            .map(DataEntityType::valueOf)
             .map(t -> Pair.of(t, JSONSerDeUtils.deserializeJson(
                 specificAttributes.get(t.toString()),
                 DataEntityAttributes.TYPE_TO_ATTR_CLASS.get(t)
@@ -1296,8 +1358,8 @@ public class DataEntityRepositoryImpl
             .collect(Collectors.toMap(Pair::getLeft, Pair::getRight));
     }
 
-    private Select<Record> getDataEntityCTESelect(final DataEntitySelectConfig config,
-                                                  final Field<?> searchVectorAlias) {
+    private Select<Record> cteDataEntitySelect(final DataEntitySelectConfig config,
+                                               final Field<?> searchVectorAlias) {
         Select<Record> dataEntitySelect;
 
         if (config.getFts() != null) {
@@ -1313,14 +1375,14 @@ public class DataEntityRepositoryImpl
                 .where(ListUtils.emptyIfNull(config.getCteSelectConditions()));
         }
 
-        if (config.getOrderBy() != null) {
-            dataEntitySelect = ((SelectConditionStep<Record>) dataEntitySelect)
-                .orderBy(config.getOrderBy());
-        }
-
         if (!config.isIncludeHollow()) {
             dataEntitySelect = ((SelectConditionStep<Record>) dataEntitySelect)
                 .and(DATA_ENTITY.HOLLOW.isFalse());
+        }
+
+        if (config.getOrderBy() != null) {
+            dataEntitySelect = ((SelectConditionStep<Record>) dataEntitySelect)
+                .orderBy(config.getOrderBy());
         }
 
         if (config.getCteLimitOffset() != null) {
@@ -1328,6 +1390,7 @@ public class DataEntityRepositoryImpl
                 .limit(config.getCteLimitOffset().limit())
                 .offset(config.getCteLimitOffset().offset());
         }
+
         return dataEntitySelect;
     }
 
@@ -1337,8 +1400,6 @@ public class DataEntityRepositoryImpl
         private List<Condition> cteSelectConditions;
         private LimitOffset cteLimitOffset;
         private List<Condition> selectConditions;
-        private boolean includeDimensions;
-        private boolean includeDimensionsAndDetails;
         private boolean includeHollow;
         private SortField<?> orderBy;
         private Fts fts;
